--- a/pom.xml
+++ b/pom.xml
@@ -13,15 +13,15 @@
 <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>3.0.1</version>
+    <version>2.0.9.RELEASE</version>
     <relativePath/> <!-- lookup parent from repository -->
 </parent>
 
 <properties>
 
 
-    <maven.compiler.source>17</maven.compiler.source>
-    <maven.compiler.target>17</maven.compiler.target>
+    <maven.compiler.source>11</maven.compiler.source>
+    <maven.compiler.target>11</maven.compiler.target>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
     <azure.functions.maven.plugin.version>1.22.0</azure.functions.maven.plugin.version>
@@ -136,7 +136,7 @@
 
                 <runtime>
                     <os>linux</os>
-                    <javaVersion>17</javaVersion>
+                    <javaVersion>11</javaVersion>
                 </runtime>
                 <appSettings>
                     <!-- Run Azure Function from package file by default -->
